// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totaling 
    $0.00
  </p>
</div>
`;

exports[`should render expenses summary 2 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $0.00
  </p>
</div>
`;
